--- a/client/src/components/uploads/Upload.scss
+++ b/client/src/components/uploads/Upload.scss
@@ -2,8 +2,15 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    color: #f1f1f1;
-    text-color:#f1f1f1;
+    //color: #f1f1f1;
+    //text-color:#f1f1f1;
+    &_slide{
+      display: flex;
+      img{
+        width: 200px;
+        height: 200px
+      }
+    }
 
   svg {
         fill: grey;
